--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -1,11 +1,21 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 .card{
     margin: 15px;
     padding: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-family: itim,cursive;
   align-items: center;
-  border: 2px solid black;
+  /* border: 1px solid black; */
   border-radius: 20px;
+  background: rgba(255, 255, 255, 0.594);
+  box-shadow: 4px 15px 20px rgb(113, 105, 173);
+  /* background-image: url('/247-600x300.jpg');
+  background-repeat: no-repeat;
+  background-size: cover; */
+  transition: .3s;
+}
+.card:hover{
+  filter:drop-shadow(0px 0px 10px rgb(136, 86, 253))
 }
