--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     background-color: black;
     display: grid;
-    grid-template-columns: 2fr 2fr 2fr 2fr 1fr;
+    grid-template-columns: 10fr   2fr 1fr;
 
     justify-content: center;
     align-items: center;
