--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -117,7 +117,7 @@ body {
 }
 
 .bg {
-  background:linear-gradient(to bottom,rgba(0, 0, 0, 0.858),rgba(255, 255, 255, 0.308),rgba(255, 255, 255, 0.015)),url(/src/images/a6.jpg) ;
+  background:linear-gradient(to bottom,rgba(0, 0, 0, 0.858),rgba(255, 255, 255, 0.308),rgba(255, 255, 255, 0.015)),url(/public/images/a8.avif) ;
   background-repeat: no-repeat;
   background-size: cover;
   filter: drop-shadow(20px);
